# XmlAdapter

./: .gitignore  CMakeLists.txt  README.md  XmlAdapter.sln  XmlAdapter.vcxproj  conanfile.py
XmlAdapter/x64/Debug/XmlAdapter.tlog/: XmlAdapter.lastbuildstate
interface/XmlAdapter/: IXmlAdapter.h  IXmlAttribute.h
source/: XmlAdapter.cpp
xercesadapter/: CMakeLists.txt
xercesadapter/include/: XercesAdapter.h  XercesAttribute.h  XercesDocument.h  XercesElement.h
xercesadapter/interface/xercesadapter/: XercesAdapterFactory.h
xercesadapter/source/: XercesAdapter.cpp  XercesAdapterFactory.cpp  XercesAttribute.cpp  XercesDocument.cpp  XercesElement.cpp
xercesadapter/test/: CMakeLists.txt  TestMain.cpp
xml_adapter_interface/: CMakeLists.txt
xml_adapter_interface/interface/xmladapter/dom/: IXmlAdapter.h  IXmlAttribute.h  IXmlDocument.h  IXmlElement.h  IXmlInputStream.h  XmlDocument.h  XmlElement.h
xml_adapter_interface/interface/xmladapter/mocks/dom/: XmlAdapterMock.h  XmlAttributeMock.h  XmlElementMock.h  XmlOutputStreamMock.h
